--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -76,7 +76,7 @@
                 class="btn btn-outline btn-primary">
             게스트하우스 신청
         </button>
-        <button id="guest-vehicle"
+        <button id="guest-vehicle" onclick="javascript: window.location.href='/guest/register';"
                 class="btn btn-outline btn-primary">
             방문차량 등록
         </button>
