--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -56,9 +56,9 @@
     </div>
     <!-- 버튼메뉴 -->
     <div class="flex justify-center flex-wrap gap-3">
-        <button id="gym"
+        <button id="gym" onclick="javascript: window.location.href='/admin/gym';"
                 class="btn btn-outline btn-primary">
-            헬스장 신청
+            헬스장 관리
         </button>
         <button id="library" onclick="javascript: window.location.href='/admin/library/histories';"
                 class="btn btn-outline btn-primary">
