--- a/src/main/resources/templates/gym/register.html
+++ b/src/main/resources/templates/gym/register.html
@@ -69,7 +69,7 @@
                         </tbody>
                     </table>
                 </div>
-                <input id="selectedDate" class="hidden" name="startDate" />
+                <input type="datetime-local" id="selectedDate" name="selectedDate" class="hidden"/>
                 <input id="selectedDate2" th:value="${membership != null ? membership.endDate.plusDays(1) : null}" />
                 <div th:if="${membership !=null}"> ※ 기존 이용권 종료일 다음날로 자동 선택됩니다. </div>
             </div>
@@ -133,11 +133,13 @@
             var selectedDate1 = document.getElementById("selectedDate").value; // 시작일 선택한거
             var selectedDate2 = document.getElementById("selectedDate2").value; // 이용권에서 가져온 날짜
 
-            if (selectedDate2 == null) { // Null 이라면, 연장이 아닌거니깐
+            if (selectedDate2.length === 0) { // Null 이라면, 연장이 아닌거니깐
                 selectedDate = selectedDate1;
             } else { // Null이 아니라면 연장인 것이니깐
                 selectedDate = selectedDate2;
             }
+
+            console.log("selectedDate:", selectedDate);
 
             // 체크박스 선택 검증
             if (!checkedCheckbox) {
