--- a/src/main/resources/templates/home/layout.html
+++ b/src/main/resources/templates/home/layout.html
@@ -27,7 +27,7 @@
     </div>
     <div class="navbar-center">
         <a class="btn-link normal-case text-xl" href="/">
-            <img src="/long_Logo.png" width="90px" alt="TownForest">
+            <img src="/Logo.png" width="100px" alt="TownForest">
         </a>
     </div>
     <div class="navbar-end">
