--- a/src/main/resources/templates/admin/gym/members.html
+++ b/src/main/resources/templates/admin/gym/members.html
@@ -46,7 +46,7 @@
                     <!-- 1번 ~ 증가하는 식으로 순번 표시 -->
                     <td th:text="${(paging.number * paging.size) + loop.index +1}"
                         style="min-width:40px; padding: 12px 0;"></td>
-                    <td style="min-width:60px; padding: 12px 0;">주소</td>
+                    <td th:text="${gymMember.address}" style="min-width:60px; padding: 12px 0;"></td>
                     <td th:text="${gymMember.user.account.fullName}"
                         style="min-width:40px; padding: 12px 0;"></td>
                     <td th:text="${#temporals.format(gymMember.startDate, 'yy-MM-dd')}"
@@ -54,7 +54,7 @@
                     <td th:text="${#temporals.format(gymMember.endDate, 'yy-MM-dd')}"
                         style="min-width:80px; padding: 12px 0;"></td>
                     <td th:text="${gymMember.remainingDays}" style="min-width:40px; padding: 12px 0;"></td>
-                    <td th:text="${@rq.getPhoneNumString(gymMember.user.account.phoneNumber)}"
+                    <td th:text="${gymMember.contact}"
                         style="min-width:120px; padding: 12px 0;"></td>
                     <td th:if="${gymMember.status==0}" style="min-width:40px; padding: 12px 0;">시작전</td>
                     <td th:if="${gymMember.status==1}" style="min-width:40px; padding: 12px 0;">이용중</td>
