--- a/src/main/resources/templates/gym/gym.html
+++ b/src/main/resources/templates/gym/gym.html
@@ -8,8 +8,8 @@
         <div class="card-body bg-base-100 shadow-xl m-2">
             <th:block th:if="${gymMembership != null}">
                 <div class="flex gap-2 items-center">
-                    <i class="fa-solid fa-ticket" style="color: #91c0fd;"></i>
-                    <h2 class="card-title">이용권 내역</h2>
+                    <i class="fa-regular fa-calendar-days" style="color: #91c0fd;"></i>
+                    <h2 class="card-title">이용권 정보</h2>
                 </div>
                 <div class="flex items-center gap-2">
                     <i class="fa-solid fa-user" style="color: #91c0fd;"></i>
@@ -18,14 +18,10 @@
                         <p>님</p>
                     </div>
                 </div>
-                <div class="flex wrap items-center gap-2 mt-2">
-                    <i class="fa-regular fa-calendar-days" style="color: #91c0fd;"></i>
-                    <p class="font-bold">이용권 정보</p>
-                </div>
                 <div class="flex wrap items-center gap-2">
                     <i class="fa-regular fa-circle-check" style="color: #91c0fd;"></i>
                     <div class="flex gap-2">
-                        <p th:if="${gymMembership.status==1}">결제일 : </p>
+                        <p th:if="${gymMembership.status!=3}">결제일 : </p>
                         <p th:if="${gymMembership.status==3}">연장일 : </p>
                         <p th:text="${#temporals.format(gymMembership.paymentDate, 'yy-MM-dd EEEEE요일')}"></p>
                     </div>
@@ -37,22 +33,30 @@
                         <p th:if="${gymMembership.status==0}"
                            th:text="|${#temporals.format(gymMembership.startDate, 'yy-MM-dd EEEEE요일')}|"></p>
                         <p th:if="${gymMembership.status==0}" class="font-bold"
-                           th:text="|${'(D+' + beforeDays + ')'}|"></p>
+                           th:text="|${'(D-' + beforeDays + ')'}|"></p>
 
-                        <p th:if="${gymMembership.status==1 or gymMembership.status==3}"
+                        <p th:if="${gymMembership.status!=0}"
                            th:text="${#temporals.format(gymMembership.startDate, 'yy-MM-dd EEEEE요일')}"></p>
                     </div>
                 </div>
                 <div class="flex wrap items-center gap-2">
                     <i class="fa-regular fa-circle-check" style="color: #91c0fd;"></i>
                     <div class="flex gap-2">
-                        <p>종료일 : </p>
-                        <p th:if="${gymMembership.status==0}"
+                        <p th:if="${gymMembership.status!=2}">종료일 : </p>
+                        <p th:if="${gymMembership.status!=2}"
                            th:text="${#temporals.format(gymMembership.endDate, 'yy-MM-dd EEEEE요일')}"></p>
-                        <p th:if="${gymMembership.status==1 or gymMembership.status==3}"
-                           th:text="|${#temporals.format(gymMembership.endDate, 'yy-MM-dd EEEEE요일')}|"></p>
-                        <p th:if="${gymMembership.status==1 or gymMembership.status==3}" class="font-bold"
+                        <p th:if="${gymMembership.status!=2}" class="font-bold"
                            th:text="|${'(D-' + afterDays + ')'}|"></p>
+                        <p th:if="${gymMembership.status==2}">일시정지일 : </p>
+                        <p th:if="${gymMembership.status==2}"
+                           th:text="${#temporals.format(gymMembership.pauseDate, 'yy-MM-dd EEEEE요일')}"></p>
+                    </div>
+                </div>
+                <div class="flex wrap items-center gap-2" th:if="${gymMembership.status==2}">
+                    <i class="fa-regular fa-circle-check" style="color: #91c0fd;"></i>
+                    <div class="flex wrap items-center gap-2">
+                        <p>남은일자 : </p>
+                        <p th:text="${gymMembership.remainingDate +'일'}"></p>
                     </div>
                 </div>
                 <div class="flex wrap items-center gap-2">
@@ -60,7 +64,9 @@
                     <div class="flex wrap items-center gap-2">
                         <p>상태 : </p>
                         <p th:if="${gymMembership.status==0}"> 이용 대기중</p>
-                        <p th:if="${gymMembership.status==1 or gymMembership.status==3}"> 이용 중</p>
+                        <p th:if="${gymMembership.status==1}"> 이용 중</p>
+                        <p th:if="${gymMembership.status==2}"> 일시정지</p>
+                        <p th:if="${gymMembership.status==3}"> 재시작</p>
                     </div>
                 </div>
             </th:block>
@@ -82,7 +88,12 @@
                     onclick="javascript: window.location.href='/gym/register';">연장신청
             </button>
             <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
+                    th:if="${gymMembership.status !=2 and gymMembership.status !=0}"
                     onclick="javascript: window.location.href='/gym/pause';">일시정지
+            </button>
+            <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
+                    th:if="${gymMembership.status ==2}"
+                    onclick="javascript: window.location.href='/gym/pause';">일시정지 해제
             </button>
             <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
                     onclick="javascript: window.location.href='/gym/refund';">환불신청
