--- a/src/main/resources/templates/gym/pause.html
+++ b/src/main/resources/templates/gym/pause.html
@@ -5,14 +5,35 @@
 </head>
 
 <body>
-
-<main layout:fragment="main">
-    <div class="flex flex-col items-center justify-center h-screen">
-        <div class="text-center flex wrap items-center gap-2">
-            <i class="fa-regular fa-face-grin-beam-sweat"></i>
-            <p>일시정지 기능은 현재 준비중입니다</p>
+<main layout:fragment="main" class="flex h-screen items-center">
+    <div class="w-full px-4 flex flex-col items-center">
+        <div class="card-body bg-base-100 shadow-xl m-2">
+            <form method="POST" th:action>
+                <input type="hidden" name="membershipId" th:value="${membership.id}">
+                <div class="flex gap-2 justify-center">
+                    <i class="fa-solid fa-circle-pause text-[3rem]" style="color: #7aabff;"></i>
+                    <h2 class="card-title">일시정지 안내</h2>
+                </div>
+                <div class="flex items-center gap-2 mt-8">
+                    <i class="fa-solid fa-user" style="color: #91c0fd;"></i>
+                    <div class="flex items-center">
+                        <p class="font-bold" th:text="${user.account.fullName}"></p>
+                        <p>님</p>
+                    </div>
+                </div>
+                <div class="mt-5">이용권 일시정지시 금일부터 이용이 제한됩니다.</div>
+                <div class="flex mt-5">
+                    <div>회원님의 남은 일수는</div>
+                    <div class="font-bold" th:text="${afterDays}"></div>
+                    <div>일입니다.</div>
+                </div>
+                <button class="btn btn-primary w-full mt-5" onclick="return confirm('일시정지 하시겠습니까?')">
+                    <i class="fa-regular fa-circle-pause" style="color: #73a1f7;"></i>
+                    일시정지하기
+                </button>
+            </form>
         </div>
-        <div class="flex gap-2 mt-2">
+        <div class="flex gap-2 mt-5">
             <div class="btn btn-primary" onclick="javascript: window.location.href='/';">
                 홈으로
             </div>
