--- a/src/main/resources/templates/gym/gym.html
+++ b/src/main/resources/templates/gym/gym.html
@@ -56,7 +56,7 @@
                     <i class="fa-regular fa-circle-check" style="color: #91c0fd;"></i>
                     <div class="flex wrap items-center gap-2">
                         <p>남은일자 : </p>
-                        <p th:text="${gymMembership.remainingDate +'일'}"></p>
+                        <p th:text="${gymMembership.remainingDay +'일'}"></p>
                     </div>
                 </div>
                 <div class="flex wrap items-center gap-2">
@@ -66,7 +66,8 @@
                         <p th:if="${gymMembership.status==0}"> 이용 대기중</p>
                         <p th:if="${gymMembership.status==1}"> 이용 중</p>
                         <p th:if="${gymMembership.status==2}"> 일시정지</p>
-                        <p th:if="${gymMembership.status==3}"> 재시작</p>
+                        <p th:if="${gymMembership.status==3}"> 연장</p>
+                        <p th:if="${gymMembership.status==4}"> 재시작</p>
                     </div>
                 </div>
             </th:block>
@@ -91,10 +92,15 @@
                     th:if="${gymMembership.status !=2 and gymMembership.status !=0}"
                     onclick="javascript: window.location.href='/gym/pause';">일시정지
             </button>
-            <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
-                    th:if="${gymMembership.status ==2}"
-                    onclick="javascript: window.location.href='/gym/pause';">일시정지 해제
-            </button>
+            <form th:action="@{/gym/unpause}" method="POST" class="w-full">
+                <input type="hidden" name="membershipId" th:value="${gymMembership.id}"/>
+                <div class="w-full px-0.1 flex flex-col">
+                    <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
+                            th:if="${gymMembership.status ==2}"
+                            onclick="return confirm('일시정지를 해제 하시겠습니까?')">일시정지 해제
+                    </button>
+                </div>
+            </form>
             <button class="btn shadow-xl m-2" style="background-color: #91c0fd;"
                     onclick="javascript: window.location.href='/gym/refund';">환불신청
             </button>
