--- a/src/main/resources/templates/gym/history.html
+++ b/src/main/resources/templates/gym/history.html
@@ -22,8 +22,8 @@
                             <tr class="text-center">
                                 <th>순번</th>
                                 <th>결제일자</th>
-                                <th>시작날짜</th>
-                                <th>종료일자</th>
+                                <th>시작일</th>
+                                <th>종료일(일시정지일)</th>
                                 <th>결제금액</th>
                                 <th>비고</th>
                             </tr>
@@ -36,11 +36,20 @@
                                     style="min-width:40px; padding: 12px 0;"></td>
                                 <td th:text="${#temporals.format(gymHistory.startDate, 'yy-MM-dd')}"
                                     style="min-width:40px; padding: 12px 0;"></td>
-                                <td th:text="${#temporals.format(gymHistory.endDate, 'yy-MM-dd')}"
+                                <td th:if="${gymHistory.status ==2}"
+                                    th:text="${#temporals.format(gymHistory.pauseDate, 'yy-MM-dd')}"
                                     style="min-width:40px; padding: 12px 0;"></td>
-                                <td th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}"></td>
+                                <td th:if="${gymHistory.status !=2}"
+                                    th:text="${#temporals.format(gymHistory.endDate, 'yy-MM-dd')}"
+                                    style="min-width:40px; padding: 12px 0;"></td>
+                                <td th:if="${gymHistory.price !=null}"
+                                    th:text="${#numbers.formatInteger(gymHistory.price, 3, 'COMMA') + '원'}"></td>
+                                <td th:if="${gymHistory.price ==null}">-</td>
                                 <td th:if="${gymHistory.status==0}" style="min-width:40px; padding: 12px 0;">결제</td>
                                 <td th:if="${gymHistory.status==1}" style="min-width:40px; padding: 12px 0;">연장</td>
+                                <td th:if="${gymHistory.status==2}" style="min-width:40px; padding: 12px 0;">일시정지</td>
+                                <td th:if="${gymHistory.status==3}" style="min-width:40px; padding: 12px 0;">재시작</td>
+                                <td th:if="${gymHistory.status==4}" style="min-width:40px; padding: 12px 0;">만료</td>
                             </tr>
                             </tbody>
                         </table>
