--- a/src/main/resources/templates/admin/aptAccount/management.html
+++ b/src/main/resources/templates/admin/aptAccount/management.html
@@ -1,7 +1,5 @@
 <html layout:decorate="~{home/layout.html}">
 <head>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}">
-    <meta name="_csrf" th:content="${_csrf.token}">
     <title>회원 관리</title>
 </head>
 <body>
@@ -35,9 +33,6 @@
                         </div>
                     </a>
                 </div>
-                <button class="focus:ring-2 focus:ring-offset-2 focus:ring-primary mt-4 sm:mt-0 inline-flex items-start justify-start px-6 py-3 bg-primary-focus focus:outline-none rounded">
-                    <p class="text-sm font-medium leading-none text-white">승인</p>
-                </button>
             </div>
         </div>
         <div class="overflow-x-auto rounded-lg border border-gray-200 shadow-md m-5">
@@ -56,8 +51,6 @@
                     <tr class="hover:bg-gray-50" th:each="list, loop:${aptAccountHouseList}">
                         <td class="px-6 py-4 text-sm font-medium text-gray-700 dark:text-gray-200 whitespace-nowrap">
                             <div class="inline-flex items-center gap-x-3">
-                                <input type="checkbox"
-                                       class="text-blue-500 border-gray-300 rounded dark:bg-gray-900 dark:ring-offset-gray-900 dark:border-gray-700">
                                 <span th:text="${list.user.account.fullName}"></span>
                             </div>
                         </td>
@@ -96,14 +89,32 @@
                         </td>
                         <td class="px-6 py-4">
                             <div class="flex justify-end gap-4">
+                                <a th:if="${!list.user.status}" href="javascript:"
+                                   th:attr="data-id=${list.id}"
+                                   onclick="ApprovalForm_submit(this);">
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         fill="none"
+                                         viewBox="0 0 24 24"
+                                         stroke-width="1.5"
+                                         stroke="currentColor"
+                                         class="w-6 h-6">
+                                        <path stroke-linecap="round"
+                                              stroke-linejoin="round"
+                                              d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                                    </svg>
+                                </a>
+                                <form hidden th:id="'approvalForm' + ${list.id}" th:action="@{|approve/${list.id}|}"
+                                      method="POST" id="approvalForm">
+                                    <input type="hidden" name="_method">
+                                    <input type="hidden" name="sortCode" th:value="${sortCode}"/>
+                                </form>
                                 <a href="#">
                                     <svg xmlns="http://www.w3.org/2000/svg"
                                          fill="none"
                                          viewBox="0 0 24 24"
                                          stroke-width="1.5"
                                          stroke="currentColor"
-                                         class="h-6 w-6"
-                                         x-tooltip="tooltip">
+                                         class="h-6 w-6">
                                         <path stroke-linecap="round"
                                               stroke-linejoin="round"
                                               d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
@@ -117,6 +128,14 @@
             </div>
         </div>
     </div>
+    <script>
+        function ApprovalForm_submit(element) {
+            const id = element.getAttribute("data-id");
+            const approvalForm = document.getElementById("approvalForm" + id);
+            approvalForm.action = approvalForm.action.replace("{id}", id);
+            approvalForm.submit();
+        }
+    </script>
 </main>
 </body>
 </html>
