--- a/src/main/resources/templates/gym/history.html
+++ b/src/main/resources/templates/gym/history.html
@@ -11,7 +11,7 @@
         <div class="text-center flex flex-col wrap gap-2">
             <div class="flex gap-2 justify-center items-center">
                 <i class="fa-solid fa-comments-dollar" style="color: #70a5ff;"></i>
-                <p class="font-bold">결제 내역</p>
+                <p class="font-bold">이용 내역</p>
             </div>
             <th:block th:if="${paging.totalElements !=0}">
                 <div class="overflow-x-auto mt-4">
@@ -22,7 +22,7 @@
                             <tr class="text-center">
                                 <th>순번</th>
                                 <th>결제일자</th>
-                                <th>시작일</th>
+                                <th>시작일(재시작일)</th>
                                 <th>종료일(일시정지일)</th>
                                 <th>결제금액</th>
                                 <th>비고</th>
@@ -32,7 +32,11 @@
                             <tr class="text-center" th:each="gymHistory, loop : ${paging}">
                                 <!-- 1번 ~ 증가하는 식으로 순번 표시 -->
                                 <td th:text="${(paging.number * paging.size) + loop.index +1}">
-                                <td th:text="${#temporals.format(gymHistory.paymentDate, 'yy-MM-dd')}"
+                                <td th:if="${gymHistory.paymentDate ==null}" style="min-width:40px; padding: 12px 0;">
+                                    -
+                                </td>
+                                <td th:if="${gymHistory.paymentDate !=null}"
+                                    th:text="${#temporals.format(gymHistory.paymentDate, 'yy-MM-dd')}"
                                     style="min-width:40px; padding: 12px 0;"></td>
                                 <td th:text="${#temporals.format(gymHistory.startDate, 'yy-MM-dd')}"
                                     style="min-width:40px; padding: 12px 0;"></td>
