--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -56,6 +56,10 @@
     </div>
     <!-- 버튼메뉴 -->
     <div class="flex justify-center flex-wrap gap-3">
+        <button id="management" onclick="javascript: window.location.href='/admin/management';"
+                class="btn btn-outline btn-primary">
+            회원 관리
+        </button>
         <button id="gym"
                 class="btn btn-outline btn-primary">
             헬스장 신청
