feat : 차량목록 페이지 세대공유

--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -65,7 +65,8 @@
             독서실 자리 예약
         </button>
         <button id="my-vehicle"
-                class="btn btn-outline btn-primary">
+                class="btn btn-outline btn-primary"
+                onclick="javascript: window.location.href='maintenance/vehicle';">
             차량 등록
         </button>
         <button id="repair"
