feat : 관리자 이용권 생성/삭제/수정 가능

--- a/src/main/resources/templates/gym/register.html
+++ b/src/main/resources/templates/gym/register.html
@@ -32,7 +32,7 @@
                           th:text="|${ticket.name} - ${#numbers.formatInteger(ticket.price, 3, 'COMMA') + '원'}|"
                           th:value="${ticket.price}">
                         </span>
-                    <div class="font-bold" th:if="${ticket.content != null}"
+                    <div class="font-bold" th:if="${!#strings.isEmpty(ticket.content)}"
                          th:text="${'(' + ticket.content + ')'}"></div>
                 </label>
             </div>
